clusters/cluster0/kubernetes/apps/renovate/renovate/app/renovate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: renovate
  name: renovate
  namespace: renovate
spec:
  template:
    metadata:
      labels:
        app: renovate
    spec:
      containers:
        - image: ghcr.io/mend/renovate-ce:13.5.0
          imagePullPolicy: Always
          name: renovate
          ports:
          - name: renovate
            containerPort: 8080
            protocol: TCP
          volumeMounts:
          - name: renovate-config
            mountPath: /config
          resources:
            requests:
              memory: 250Mi
              cpu: 100m
            limits:
              memory: 1Gi
              cpu: 500m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: renovate-config
        persistentVolumeClaim:
          claimName: "renovate-config"
  selector:
    matchLabels:
      app: renovate
