clusters/cluster0/kubernetes/apps/renovate/renovate/app/renovate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renovate
  namespace: renovate
spec:
  type: ClusterIP
  selector:
    app: renovate
  ports:
     # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8080
      protocol: TCP
      targetPort: 8080
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      # nodePort: 31400
