clusters/cluster0/kubernetes/apps/renovate/renovate/app/renovate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: renovate
  namespace: renovate
  annotations:
    external-dns.alpha.kubernetes.io/hostname: biggs.dog
spec:
  ingressClassName: external
  rules:
  - host: renovate.biggs.dog
    http:
      paths:
      - path: /webhook
        pathType: Prefix
        backend: 
          service:
            name: renovate
            port:
              number: 8080
